fixed alignment issues of checkin buttons on mobile phones

--- a/www/css/styles.mobile.less
+++ b/www/css/styles.mobile.less
@@ -111,12 +111,10 @@
             margin: 0px 0 4px 35px;
             clear: left;
         }
-        .checkin_button {
-            margin: 0;
+        .badge {
             position: absolute;
-            right: 10px;
-            top: 5px;
-            width: 75px;
+            top: 0;
+            right: 65px;
         }
     }
 }
